--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/async-storage": "^1.12.1",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
     "expo-status-bar": "~1.2.0",
     "prop-types": "^15.8.1",
     "react": "17.0.1",
